# m1_proggraph_projet-cuda

./: CMakeLists.txt  README.md  output  test.sh
asciiart/: ascii_cpu.cpp  ascii_gpu.cu
asciiart/include/: ascii.hpp  ascii_cpu.hpp
asciiart/src/: ascii_cpu.cpp  ascii_gpu.cu
common/include/: common.hpp
common/src/: common.cpp
convolution/include/: convolution.hpp
convolution/src/: convolution.cpp  convolution.cu
grayscale/include/: grayscale.hpp
grayscale/src/: grayscale.cpp  grayscale.cu
output/: ascii_cpu.txt  ascii_gpu.txt  grayscale_gpu
