CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT("CUDA RIBARDIÈRE WALCAK")

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_C_STANDARD 20)
ENABLE_LANGUAGE(CUDA)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(asciiart/include)
FILE(GLOB ASCII_CPU_SOURCES
        "asciiart/src/*.cpp")
ADD_EXECUTABLE(ascii_cpu ${ASCII_CPU_SOURCES})
TARGET_LINK_LIBRARIES(ascii_cpu ${OpenCV_LIBS})
FILE(GLOB ASCII_GPU_SOURCES
        "asciiart/src/*.cu")
ADD_EXECUTABLE(ascii_gpu ${ASCII_GPU_SOURCES})
TARGET_LINK_LIBRARIES(ascii_gpu ${OpenCV_LIBS})